Fix currency dropdown alignment and textbox size

--- a/assets/css/blog.css
+++ b/assets/css/blog.css
@@ -60,7 +60,7 @@ position: absolute;
 bottom: 0;
 left: 0;
 height: 7px; /* Same height as the border */
-background-color: rgb(4, 0, 128);
+background-color: rgb(17, 9, 230);
 width: 100%;
 transform-origin: right; /* Start shrinking from the right */
 }
