--- a/navbar.css
+++ b/navbar.css
@@ -9,15 +9,22 @@
 }
 /* Navbar Styling */
 .navbar-collapse {
-    background-color: #adb4ff;
-    border-radius: 10px; 
+    display: flex;
+    justify-content: center;
+    background-color: #3a90dc;
+    border-radius: 10px;
     padding: 15px 30px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); 
-    border-bottom: 3px solid #edf2f4; 
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    border-bottom: 2px solid #edf2f4;
     width: 100vw;
     position: relative;
     left: 0;
-    transition: background-color 0.3s ease-in-out; 
+
+    transition: background-color 0.3s ease-in-out;
+    -webkit-transition: background-color 0.3s ease-in-out;
+    -moz-transition: background-color 0.3s ease-in-out;
+    -ms-transition: background-color 0.3s ease-in-out;
+    -o-transition: background-color 0.3s ease-in-out;
 }
 
 .navbar-collapse:hover {
@@ -31,7 +38,7 @@
 }
 
 .navbar-nav .nav-item a {
-    color: #edf2f4; 
+    color: #0077b8; 
     font-weight: bold;
     text-transform: uppercase;
     text-decoration: none;
@@ -40,7 +47,7 @@
 }
 
 .navbar-nav .nav-item a:hover {
-    color: #2b2d42; 
+    color: #f60e0e; 
     background-color: rgba(255, 255, 255, 0.1); 
     border-radius: 5px; 
 }
@@ -108,7 +115,7 @@
 }
 
 .mobile-menu a:hover:after {
-    width: 50%;
+    width: 75%;
 }
 .mobile-menu li a:hover:after {
     width: 0;
@@ -187,4 +194,5 @@
 }
 .mobile-menu_open .mobile-menu__trigger:hover span::after {
     transform: rotate(30deg);
+
 }
